it compiles and executes; but the results are not as expected. still I have issues with the pinned memory

--- a/data-movement/Makefile
+++ b/data-movement/Makefile
@@ -1,6 +1,6 @@
 FC = pgfortran
 FCFLAGS = -c -fast
-CUDAFLAGS = -Mfree -Mcuda -Minfo
+CUDAFLAGS = -Mfree -Mcuda=cuda8.0 -Minfo
 
 WHICH_FC = $(shell which $(FC))
 DIR_FC = $(shell dirname $(WHICH_FC))
