memory-texture added, but has a strange runtime problem with launching the kernel

--- a/memory-access/Makefile
+++ b/memory-access/Makefile
@@ -1,5 +1,5 @@
 FC = pgfortran
-FCFLAGS = -g -O2 -Mcuda=cc35,cuda8.0
+FCFLAGS = -g -O2 -Mcuda=fastmath,cc35,cuda8.0 #-Mlarge_array
 
 # Executables
 access  = do_access.exe
@@ -12,19 +12,25 @@ main_average = average.f90
 # Kernels
 kernels = $(wildcard kern_*.cuf)
 objects = $(patsubst %.cuf, %.o, $(wildcard kern_*.cuf))
-
-all: $(access)
+ 
+all: $(access) $(average)
 
 $(access) : $(objects) access.o
+	$(FC) $(FCFLAGS) -o $@ $^
+
+$(average) : kern_averages.o average.o
 	$(FC) $(FCFLAGS) -o $@ $^
 
 %.o : %.cuf
 	$(FC) $(FCFLAGS) -c $< -o $*.o
 
-access.o: $(objects) access.f90
+access.o: access.f90
+	$(FC) $(FCFLAGS) -c $^ -o $@
+
+average.o: average.f90
 	$(FC) $(FCFLAGS) -c $^ -o $@
 
 .PHONEY: clean
 
 clean:
-	rm -rf *.mod *.o $(access)
+	rm -rf *~ *.mod *.o $(access) $(average) 
